--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=4315
 
 #spring.config.activate.on-profile=ci,test
 #spring.datasource.driverClassName=org.h2.Driver
