--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,12 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=postgres
-spring.datasource.password=4315
+#spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+#spring.datasource.username=postgres
+#spring.datasource.password=4315
 
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:shareit
-#spring.datasource.username=test
-#spring.datasource.password=test
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.username=test
+spring.datasource.password=test
